--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
   <link rel="icon" type="image/png" href="./Images/logo.png">
 </head>
 <body>
-  <app-root></app-root>
+  <div class="blur-background"></div> <!-- Background image container -->
+  <app-root></app-root> <!-- All your content stays clear -->
 </body>
+
 </html>
