--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="./Images/logo.png">
+  <link herf="https://cdn.jsdelivr.net/npm/bootstrap-icon@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
   <div class="blur-background"></div> <!-- Background image container -->
