--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>ExamPortal1</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/png" href="./Images/logo.png">
+  <link rel="icon" type="image/png" href="/Browserlogo.png">
   <link herf="https://cdn.jsdelivr.net/npm/bootstrap-icon@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
